--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -5,13 +5,13 @@
     height: 100vh;
 
     .app__header {
-        height: 60px;
+        // height: 120px;
         border: 1px solid red;
     }
 
     .app__content {
         display: flex;
-        height: calc(100vh - 60px);
+        height: 100vh;
         width: 100%;
     }
 }
