--- a/src/app/components/Header/Header.scss
+++ b/src/app/components/Header/Header.scss
@@ -2,8 +2,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 5px;
 
     &__userAvatar, &__logo {
         height: 40px;
     }
+}
+.breadcrumb {
+    width: 100%;
+    padding-left: 5px;
 }
