--- a/src/app/pages/characterView/CharacterView.sass
+++ b/src/app/pages/characterView/CharacterView.sass
@@ -1,3 +1,6 @@
 .character-view
+    padding: 0.5em
     display: flex
     flex-direction: column
+    overflow: auto
+    border: 1px solid orange
