--- a/src/app/components/Header/Header.scss
+++ b/src/app/components/Header/Header.scss
@@ -1,14 +1,5 @@
 .header {
+    width: 100%;
+    height: 42px;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px;
-
-    &__userAvatar, &__logo {
-        height: 40px;
-    }
-}
-.breadcrumb {
-    width: calc(100vw - 53px);
-    padding-left: 5px;
 }
