Menu item render implement

--- a/src/app/App.sass
+++ b/src/app/App.sass
@@ -3,7 +3,6 @@
 .app
     display: flex
     flex-direction: column
-    border: 1px solid blue
     overflow: auto
     width: 100vw
     height: 100vh
@@ -16,5 +15,5 @@
         flex-direction: column
         width: 100%
         padding: 6px
-        border: 1px solid green
+        background-color: darken(white, 5%)
         overflow: auto
