--- a/src/app/components/GameMenu/GameMenu.sass
+++ b/src/app/components/GameMenu/GameMenu.sass
@@ -1,7 +1,10 @@
 .game-menu
-    width: 100%
-    background-color: red
-    
     display: flex
+
     &__button
-        width: 100%
+        flex-grow: 1
+        height: 100%
+        border-radius: 0
+
+.submenu
+    display: flex
