--- a/src/app/pages/characterView/CharacterView.sass
+++ b/src/app/pages/characterView/CharacterView.sass
@@ -1,6 +1,9 @@
+@import "./../../mixins"
+    
 .character-view-container
     display: flex
     flex-wrap: wrap
+    overflow: hidden
     
 
     &__item
