--- a/src/app/common/sideMenu.sass
+++ b/src/app/common/sideMenu.sass
@@ -1,4 +1,4 @@
-@import "./../../mixins"
+@import "./../mixins"
 
 .ant-drawer-body 
     padding: 0
@@ -58,3 +58,5 @@
             margin-left: -.75rem
             opacity: 0
 
+.user-account
+    border: 1px solid red
