--- a/src/app/App.sass
+++ b/src/app/App.sass
@@ -5,6 +5,8 @@
     flex-direction: column
     overflow: hidden
 
+    height: calc(var(--vh, 1vh) * 100)
+
     +for-desktop-up
         flex-direction: row
 
