--- a/src/app/common/sideMenu.sass
+++ b/src/app/common/sideMenu.sass
@@ -9,7 +9,7 @@
     flex-direction: column
 
     &--mobile
-        height: 100vh
+        height: calc(var(--vh, 1vh) * 100)
         overflow: auto
         border: 1px solid red
 
@@ -24,7 +24,7 @@
     display: flex
     flex-direction: column
     justify-content: space-between
-    height: 100vh
+    height: calc(var(--vh, 1vh) * 100)
 
     &__item
         display: flex
