adventure list view implement

--- a/src/app/App.sass
+++ b/src/app/App.sass
@@ -6,9 +6,11 @@
     overflow: hidden
 
     height: calc(var(--vh, 1vh) * 100)
+    scroll-behavior: smooth
 
     +for-desktop-up
         flex-direction: row
 
 .content
     width: 100%
+    scroll-behavior: smooth
