--- a/src/app/pages/adventureList/AdventureList.sass
+++ b/src/app/pages/adventureList/AdventureList.sass
@@ -1,4 +1,38 @@
+@import './../../mixins'
+
+.adventure-header 
+    display: flex
+    justify-content: space-between
+    align-items: center
+
+    &__add-button
+        margin-right: 24px
+
 .adventure-list
     padding: 1em
     display: flex
     flex-direction: column
+    align-items: center
+
+    +for-desktop-up
+        flex-direction: row
+        flex-wrap: wrap
+        align-items: normal
+
+.adventure-item
+    width: 300px
+    margin-bottom: 2rem
+
+    +for-desktop-up
+        margin: 1rem
+        
+
+    &__image
+        width: 100%
+        max-height: 200px
+        object-fit: cover
+
+    &__description
+        max-height: 100px
+        overflow: auto
+    
