Adventure view page implement

--- a/src/app/App.sass
+++ b/src/app/App.sass
@@ -11,6 +11,10 @@
     +for-desktop-up
         flex-direction: row
 
+.header
+    display: flex
+    justify-content: flex-end
+
 .content
     width: 100%
     scroll-behavior: smooth
